[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/AirlockHallwayLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/art/space_background.tres" type="TileSet" id=2]
[ext_resource path="res://assets/art/mars.png" type="Texture" id=3]
[ext_resource path="res://assets/art/WallTileAtlas.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MetalDoorScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/LaserReceiver.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Gravity.gd" type="Script" id=8]
[ext_resource path="res://scenes/Ladder.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 956.893

[node name="AirlockHallwayLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TileMap" parent="CanvasLayer"]
tile_set = ExtResource( 2 )
format = 1

[node name="Mars" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 889.937, 428.564 )
texture = ExtResource( 3 )

[node name="Environment" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327680, -1610612732, 0, 327681, -1610612732, 0, 327682, -1610612732, 0, 327683, -1610612732, 0, 327684, -1610612732, 0, 327685, 1610612736, 0, 327686, 1610612736, 0, 327687, 1610612736, 0, 327691, 1610612736, 0, 327692, 1610612736, 0, 327693, 1610612736, 0, 327694, 1610612736, 0, 327695, 1610612736, 0, 327696, 1610612736, 0, 327697, 1610612736, 0, 327698, 1610612736, 0, 327699, 1610612736, 0, 327700, 1610612736, 0, 327701, 1610612736, 0, 327702, 1610612736, 0, 327703, -1073741818, 0, 327704, -1073741818, 0, 327705, -1073741818, 0, 327706, -1073741818, 0, 327707, -1073741818, 0, 327708, -1073741818, 0, 393216, -1610612732, 0, 393217, -1610612732, 0, 393218, -1610612732, 0, 393219, -1610612732, 0, 393220, -1610612726, 0, 393221, 9, 0, 393222, 9, 0, 393223, 9, 0, 393224, 9, 0, 393225, 9, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393229, 9, 0, 393230, 9, 0, 393231, 9, 0, 393232, 9, 0, 393233, 9, 0, 393234, 9, 0, 393235, 9, 0, 393236, 9, 0, 393237, 9, 0, 393238, 9, 0, 393239, 1610612746, 0, 393240, -1073741818, 0, 393241, -1073741818, 0, 393242, -1073741818, 0, 393243, -1073741818, 0, 393244, -1073741818, 0, 458752, -1610612732, 0, 458753, -1610612732, 0, 458754, -1610612732, 0, 458755, -1610612736, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 9, 0, 458761, 9, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 9, 0, 458767, 9, 0, 458768, 9, 0, 458769, 9, 0, 458770, 9, 0, 458771, 9, 0, 458772, 9, 0, 458773, 9, 0, 458774, 9, 0, 458775, 9, 0, 458776, -1073741824, 0, 458777, -1073741818, 0, 458778, -1073741818, 0, 458779, -1073741818, 0, 458780, -1073741818, 0, 524288, -1610612732, 0, 524289, -1610612732, 0, 524290, -1610612732, 0, 524291, -1610612736, 0, 524292, 9, 0, 524293, 9, 0, 524294, 9, 0, 524295, 9, 0, 524296, 9, 0, 524297, 9, 0, 524298, 9, 0, 524299, 9, 0, 524300, 9, 0, 524301, 9, 0, 524302, 9, 0, 524303, 9, 0, 524304, 9, 0, 524305, 9, 0, 524306, 9, 0, 524307, 9, 0, 524308, 9, 0, 524309, 9, 0, 524310, 9, 0, 524311, 9, 0, 524312, -1073741824, 0, 524313, -1073741818, 0, 524314, -1073741818, 0, 524315, -1073741818, 0, 524316, -1073741818, 0, 589824, 1610612736, 0, 589825, 1610612736, 0, 589826, 1610612736, 0, 589827, -1610612726, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 9, 0, 589833, 9, 0, 589834, 9, 0, 589835, 9, 0, 589836, 9, 0, 589837, 9, 0, 589838, 9, 0, 589839, 9, 0, 589840, 9, 0, 589841, 9, 0, 589842, 9, 0, 589843, 9, 0, 589844, 9, 0, 589845, 9, 0, 589846, 9, 0, 589847, 9, 0, 589848, 1610612746, 0, 589849, 1610612736, 0, 589850, 1610612736, 0, 589851, 1610612736, 0, 589852, 1610612736, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 9, 0, 655374, 9, 0, 655375, 9, 0, 655376, 9, 0, 655377, 9, 0, 655378, 9, 0, 655379, 9, 0, 655380, 9, 0, 655381, 9, 0, 655382, 9, 0, 655383, 9, 0, 655384, 9, 0, 655385, 9, 0, 655386, 9, 0, 655387, 9, 0, 655388, 9, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 9, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 720914, 9, 0, 720915, 9, 0, 720916, 9, 0, 720917, 9, 0, 720918, 9, 0, 720919, 9, 0, 720920, 9, 0, 720921, 9, 0, 720922, 9, 0, 720923, 9, 0, 720924, 9, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 10, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 9, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 786450, 9, 0, 786451, 9, 0, 786452, 9, 0, 786453, 9, 0, 786454, 9, 0, 786455, 9, 0, 786456, -1073741814, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 851968, -1610612732, 0, 851969, -1610612732, 0, 851970, -1610612732, 0, 851971, -1610612736, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851975, 9, 0, 851976, 9, 0, 851977, 9, 0, 851978, 9, 0, 851979, 9, 0, 851980, 9, 0, 851981, 9, 0, 851982, 9, 0, 851983, 9, 0, 851984, 9, 0, 851985, 9, 0, 851986, 9, 0, 851987, 9, 0, 851988, 9, 0, 851989, 9, 0, 851990, 9, 0, 851991, 9, 0, 851992, -1073741824, 0, 851993, -1073741818, 0, 851994, -1073741818, 0, 851995, -1073741818, 0, 851996, -1073741818, 0, 917504, -1610612732, 0, 917505, -1610612732, 0, 917506, -1610612732, 0, 917507, -1610612736, 0, 917508, 9, 0, 917509, 9, 0, 917510, 9, 0, 917511, 9, 0, 917512, 9, 0, 917513, 9, 0, 917514, 9, 0, 917515, 9, 0, 917516, 9, 0, 917517, 9, 0, 917518, 9, 0, 917519, 9, 0, 917520, 9, 0, 917521, 9, 0, 917522, 9, 0, 917523, 9, 0, 917524, 9, 0, 917525, 9, 0, 917526, 9, 0, 917527, 9, 0, 917528, -1073741824, 0, 917529, -1073741818, 0, 917530, -1073741818, 0, 917531, -1073741818, 0, 917532, -1073741818, 0, 983040, -1610612732, 0, 983041, -1610612732, 0, 983042, -1610612732, 0, 983043, -1610612732, 0, 983044, 10, 0, 983045, 9, 0, 983046, 9, 0, 983047, 9, 0, 983048, 9, 0, 983049, 9, 0, 983050, 9, 0, 983051, 9, 0, 983052, 9, 0, 983053, 9, 0, 983054, 9, 0, 983055, 9, 0, 983056, 9, 0, 983057, 9, 0, 983058, 9, 0, 983059, 9, 0, 983060, 9, 0, 983061, 9, 0, 983062, 9, 0, 983063, -1073741814, 0, 983064, -1073741818, 0, 983065, -1073741818, 0, 983066, -1073741818, 0, 983067, -1073741818, 0, 983068, -1073741818, 0, 1048576, -1610612732, 0, 1048577, -1610612732, 0, 1048578, -1610612732, 0, 1048579, -1610612732, 0, 1048580, -1610612732, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, -1073741818, 0, 1048600, -1073741818, 0, 1048601, -1073741818, 0, 1048602, -1073741818, 0, 1048603, -1073741818, 0, 1048604, -1073741818, 0 )

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 34.869, 702.14 )

[node name="Airlock1" parent="." instance=ExtResource( 6 )]
position = Vector2( 608.008, 367.64 )
scale = Vector2( 1.5, 2 )
open_width = 128
time_to_open_seconds = 0.25
initially_open = true

[node name="Airlock2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1184.54, 1040.59 )
scale = Vector2( 1.5, 2 )
open_width = 128
time_to_open_seconds = 0.25

[node name="Airlock1Receiver" parent="." instance=ExtResource( 7 )]
position = Vector2( 760.949, 385.948 )
rotation = 3.14159
scale = Vector2( 2, 3 )

[node name="Airlock2Receiver" parent="." instance=ExtResource( 7 )]
position = Vector2( 1503.37, 988.13 )
rotation = -0.785398
scale = Vector2( 2, 3 )

[node name="EntranceDoor" parent="." instance=ExtResource( 6 )]
position = Vector2( -0.735092, 703.93 )
rotation = 1.5708

[node name="Airlock1Gravity" type="Area2D" parent="."]
visible = false
space_override = 1
gravity_point = true
gravity_distance_scale = 0.001
gravity = 500.0
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Airlock1Gravity"]
position = Vector2( 584.316, 530.783 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Airlock1Gravity"]
position = Vector2( 608.718, 310.184 )

[node name="Airlock2Gravity" type="Area2D" parent="."]
visible = false
space_override = 1
gravity_point = true
gravity_distance_scale = 0.001
gravity = 500.0
script = ExtResource( 8 )
initially_enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Airlock2Gravity"]
position = Vector2( 1183.81, 887.991 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Airlock2Gravity"]
position = Vector2( 1187.33, 1093.5 )

[node name="Ladder" parent="." instance=ExtResource( 9 )]
position = Vector2( 7.41087, 670.369 )
scale = Vector2( 2, 2 )
[connection signal="closed" from="Airlock1" to="." method="_on_Airlock1_closed"]
[connection signal="opened" from="Airlock1" to="." method="_on_Airlock1_opened"]
[connection signal="closed" from="Airlock2" to="." method="_on_Airlock2_closed"]
[connection signal="opened" from="Airlock2" to="." method="_on_Airlock2_opened"]
[connection signal="laser_detected" from="Airlock1Receiver" to="." method="_on_Airlock1Receiver_laser_detected"]
[connection signal="laser_detected" from="Airlock2Receiver" to="." method="_on_Airlock2Receiver_laser_detected"]
